--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
   release_lambda:
     docker:
       - image: circleci/golang:latest
+    working_directory: /go/src/github.com/GSA/grace-securityhub
     steps:
       - checkout
       - run:
