--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,12 +54,24 @@ jobs:
       - run:
           name: Check Terraform configurations with tflint
           command: tflint
+  tfsec:
+    docker:
+      - image: circleci/golang:latest
+    steps:
+      - checkout
+      - run:
+        name: Install tfsec
+        command: env GO111MODULE=on go get -u github.com/liamg/tfsec/cmd/tfsec
+      - run:
+        name: Terraform static code analysis with tfsec
+        command: tfsec
 
 workflows:
   version: 2
   build:
     jobs:
       - validate
+      - tfsec
       - test_lambda
       - release_lambda:
           requires:
