remove new linters

--- a/handler/.golangci.yml
+++ b/handler/.golangci.yml
@@ -123,6 +123,8 @@ linters:
     - prealloc
     - gochecknoinits
     - gochecknoglobals
+    - wsl
+    - gomnd
   fast: false
 
   # Independently from option `exclude` we use default exclude patterns,
