--- a/handler/Makefile
+++ b/handler/Makefile
@@ -4,7 +4,7 @@ RELEASEDIR ?= ../release/
 CIRCLE_PROJECT_REPONAME ?= grace-securityhub
 APPNAME := $(CIRCLE_PROJECT_REPONAME)
 
-.PHONY: release clean test lint dependencies
+.PHONY: precommit release clean test lint dependencies
 release: test
 	mkdir -p $(RELEASEDIR)
 	GOOS=$(GOOS) GOARCH=$(GOARCH) go build -o $(RELEASEDIR)$(APPNAME) -v
@@ -20,7 +20,7 @@ test: lint
 lint: dependencies
 	golangci-lint run ./...
 
-dependencies: $(GOLANGCILINT) go.sum
+dependencies: $(GOLANGCILINT) go.sum precommit
 
 $(GOLANGCILINT):
 	go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
@@ -30,3 +30,8 @@ go.sum: go.mod
 
 go.mod:
 	go mod init
+
+precommit:
+ifneq ($(strip $(hooksPath)),.github/hooks)
+	@git config --add core.hooksPath .github/hooks
+endif
