--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     environment:
       AWS_DEFAULT_REGION: us-east-1
     docker:
-      - image: hashicorp/terraform:0.12.6
+      - image: hashicorp/terraform:light
     steps:
       - checkout
       - run:
